--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
                  </div>
                  <div class="col_2">
                     <p>Exclusively Available On RedStore</p>
-                    <h1>Smart Band 4</h1>
+                    <h1>Smart Band Mi4</h1>
                     <small>The Mi Smart Band 4 features  a 393.9% larger 
                     (than Mi 3) ANOLED color  full-touch display display
                     adjustable brightness, so everything is clearer as can be.</small>
-                    <a href="">Buy Now &#8594</a>
+                    <a href="">Buy This Now &#8594</a>
                  </div>
             </div>
         </div>
