--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <small>The Mi Smart Band 4 features  a 393.9% larger 
                     (than Mi 3) ANOLED color  full-touch display display
                     adjustable brightness, so everything is clearer as can be.</small>
-                    <a href="">Buy Now &#8594</a>
+                    <a href="">Purchase Now &#8594</a>
                  </div>
             </div>
         </div>
