added some new content sections

--- a/index.html
+++ b/index.html
@@ -237,13 +237,79 @@
                  <div class="col_2">
                     <p>Exclusively Available On RedStore</p>
                     <h1>Smart Band Mi4</h1>
-                    <small>The Mi Smart Band 4 features  a 393.9% larger 
+                    <small>
+                         The Mi Smart Band 4 features  a 393.9% larger 
                     (than Mi 3) ANOLED color  full-touch display display
-                    adjustable brightness, so everything is clearer as can be.</small>
-                    <a href="">Purchase Now &#8594</a>
+                    adjustable brightness, so everything is clearer as can be.
+                    </small>
+                    <a href="" class="btn">Buy Now &#8594</a>
                  </div>
             </div>
         </div>
+    </div>
+
+    <!--------------testimonial------------>
+
+    <div class="testimonial">
+         <div class="small_container">
+              <div class="row">
+                   <div class="col_3">
+                        <i class="fa fa-quote-left"></i>
+                        <p>he purpose of lorem ipsum is to create a natural 
+                             looking block of text (sentence, paragraph, page, etc.)
+                              that doesn't distract from the layout. A practice not 
+                              without controversy, laying out pages with meaningless 
+                              filler text can be very useful when the focus is meant 
+                              to be on design, not content. </p>
+                              <div class="rating">
+                                   <span class="fa fa-star checked"></span>
+                                   <span class="fa fa-star checked"></span>
+                                   <span class="fa fa-star checked"></span>
+                                   <span class="fa fa-star checked"></span>
+                                   <span class="fa fa-star-half checked"></span>
+                                 </div>
+                                 <img src="/images/user-1.png">
+                                 <h3>Sean Parker</h3>
+                   </div>
+                   <div class="col_3">
+                    <i class="fa fa-quote-left"></i>
+                    <p>he purpose of lorem ipsum is to create a natural 
+                         looking block of text (sentence, paragraph, page, etc.)
+                          that doesn't distract from the layout. A practice not 
+                          without controversy, laying out pages with meaningless 
+                          filler text can be very useful when the focus is meant 
+                          to be on design, not content. </p>
+                          <div class="rating">
+                               <span class="fa fa-star checked"></span>
+                               <span class="fa fa-star checked"></span>
+                               <span class="fa fa-star checked"></span>
+                               <span class="fa fa-star checked"></span>
+                               <span class="fa fa-star-half checked"></span>
+                             </div>
+                             <img src="/images/user-2.png">
+                             <h3>Mike Smith</h3>
+                    </div>
+                    <div class="col_3">
+                         <i class="fa fa-quote-left"></i>
+                         <p>he purpose of lorem ipsum is to create a natural 
+                              looking block of text (sentence, paragraph, page, etc.)
+                               that doesn't distract from the layout. A practice not 
+                               without controversy, laying out pages with meaningless 
+                               filler text can be very useful when the focus is meant 
+                               to be on design, not content. </p>
+                               <div class="rating">
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star-half checked"></span>
+                                  </div>
+                                  <img src="/images/user-3.png">
+                                  <h3>Mabel Joe</h3>
+                    </div>
+               </div>
+         </div>
+
     </div>
 </body>
 </html>
